# gbemu

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install_dependencies.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
app/: CMakeLists.txt
app/src/: fb_renderer.cpp  fb_renderer.h  main.cpp  window.cpp  window.h
core/: CMakeLists.txt
core/resources/: dmg_boot.h  dmg_opcodes.h
core/src/: core.cpp  core.h  cpu.cpp  cpu.h  fb_renderer.cpp  fb_renderer.h  gb.cpp  gb.h  memory_map.h  ppu.cpp  ppu.h  window.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  tests.cpp
